tests/ui/rfcs/rfc-2091-track-caller/only-for-fns.stderr
error: `#[track_caller]` attribute cannot be used on structs
  --> $DIR/only-for-fns.rs:1:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^
   |
help: `#[track_caller]` can be applied to functions
  --> $DIR/only-for-fns.rs:1:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

